ultimo cambio en rama master

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             </div>
         </section>
     <!-- Cierra Barra seccion calculadora -->
+    <!-- Inicio pie de pagina -->
+        <footer class="fila">
+            <p>&copy;2019-Página de Ejemplo y Práctica para usar GIT y GitHub</p>
+        </footer>
+    <!-- Cierra pie de pagina -->
     </main>
     <script src="js/script.js"></script>
 </body>
