agregando calculadora en html con estilos basicos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,29 @@
             </ul>
         </nav>
     <!-- Cierra Barra de Navegación -->
-    
+    <!-- Inicio de seccion calculadora -->
+        <section class="fila">
+            <div class="calc">
+                <div class="pantalla">
+                    <input class="pant" type="text" size="12" id="numero">
+                </div>
+                <div class="botones_calc">
+                    <button id="suma">+</button>
+                    <button id="resta">-</button>
+                    <button id="multiplica">X</button>
+                    <button id="dividir">/</button>
+                    <button id="potencia">x<sup>y</sup></button>
+                    <button id="cuadrado">x<sup>2</sup></button>
+                    <button id="inverso">1/x</button>
+                    <button id="raiz">&radic;</button>
+                </div>
+                <div>
+                    <button class="igual_centrado">=</button>
+                </div>
+            </div>
+            </div>
+        </section>
+    <!-- Cierra Barra seccion calculadora -->
     </main>
 </body>
 </html>
